[package]
name = "fob-native"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Node.js bindings for Fob bundler core"
publish = false

[package.metadata.napi]
name = "fob-native"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fob-bundler = { path = "../fob-bundler", version = "0.5.0", features = ["logging"] }
fob-graph = { path = "../fob-graph", version = "0.5.0" }
fob-mdx = { workspace = true, features = ["bundler"] }
napi = { workspace = true, features = ["napi6", "tokio_rt"] }
napi-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
oxc_resolver.workspace = true
miette.workspace = true
path-clean.workspace = true

# tokio with full features for native targets only
# This prevents workspace feature unification from affecting WASM builds
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
