[package]
name = "fob-php"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PHP bindings for Fob bundler core"
publish = false

[lib]
name = "fob_php"
crate-type = ["cdylib"]

[dependencies]
fob-bundler = { path = "../fob-bundler", version = "0.4.1", features = ["logging"] }
fob-graph = { path = "../fob-graph", version = "0.4.1" }
fob-plugin-mdx = { path = "../fob-plugin-mdx" }
ext-php-rs = "0.15.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
oxc_resolver.workspace = true
miette.workspace = true
path-clean.workspace = true
once_cell.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile.workspace = true
