[package]
name = "fob-plugin-astro"
version = "0.3.0"
authors.workspace = true
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
description = "Rolldown bundler plugin for Astro - extract and process frontmatter and script blocks from Astro components"
repository = "https://github.com/foxworth-uni/fob"

[dependencies]
# Fob graph (includes analysis)
fob-graph = { path = "../fob-graph", version = "0.3.0" }

# Fob bundler (re-exports rolldown types)
fob-bundler = { path = "../fob-bundler", version = "0.3.0" }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
