[package]
name = "fob-plugin-mdx"
version = "0.1.0"
authors.workspace = true
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
publish = false
description = "Rolldown bundler plugin for MDX - compile MDX files in Rolldown builds"

[dependencies]
# Cross-workspace dependency to bunny-mdx
bunny-mdx = { workspace = true }

# Fob bundler (re-exports rolldown types)
fob-bundler = { path = "../fob-bundler", version = "0.2.0" }

# Workspace dependencies
anyhow.workspace = true
