[package]
name = "fob-plugin-mdx"
version = "0.2.1"
authors.workspace = true
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
publish = false
description = "Rolldown bundler plugin for MDX - compile MDX files in Rolldown builds"

[dependencies]
fob-mdx = { workspace = true }
fob-bundler = { workspace = true }
anyhow.workspace = true
tracing.workspace = true

# Platform-specific dev dependencies for native tests
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
