[package]
name = "fob-plugin-tailwind"
version = "0.3.0"
authors.workspace = true
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Rolldown bundler plugin for Tailwind CSS v4"
publish = false

[dependencies]
fob-bundler = { path = "../fob-bundler", version = "0.3.0" }

anyhow.workspace = true
thiserror.workspace = true
miette.workspace = true
serde_json.workspace = true
tracing.workspace = true
tempfile = "3"

tokio = { workspace = true, features = ["process", "time", "sync", "rt"] }
