[package]
name = "fob-plugin-vue"
version = "0.2.1"
authors.workspace = true
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
description = "Rolldown bundler plugin for Vue - extract and process script blocks from Vue SFCs"
repository = "https://github.com/foxworth-uni/fob"

[dependencies]
# Fob graph (includes analysis)
fob-graph = { path = "../fob-graph", version = "0.2.1" }

# Fob bundler (re-exports rolldown types)
fob-bundler = { path = "../fob-bundler", version = "0.2.1" }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
