[package]
name = "fob-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Fob bundler core"
publish = false

[lib]
name = "fob"
crate-type = ["cdylib"]

[dependencies]
fob-bundler = { path = "../fob-bundler", version = "0.4.1", features = ["logging"] }
fob-graph = { path = "../fob-graph", version = "0.4.1" }
fob-plugin-mdx = { path = "../fob-plugin-mdx" }
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
oxc_resolver.workspace = true
miette.workspace = true
path-clean.workspace = true

# tokio with full features for native targets only
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile.workspace = true
