[package]
name = "fob-ruby"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ruby bindings for Fob bundler core"
publish = false

[lib]
name = "fob_ruby"
crate-type = ["cdylib"]

[dependencies]
fob-bundler = { path = "../fob-bundler", version = "0.4.2", features = ["logging"] }
fob-graph = { path = "../fob-graph", version = "0.4.2" }
fob-plugin-mdx = { path = "../fob-plugin-mdx" }
magnus = "0.8.2"
rb-sys = "=0.9.118"  # Pin to 0.9.118 - version 0.9.119 has a publishing bug (missing rust.rs)
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
oxc_resolver.workspace = true
miette.workspace = true
path-clean.workspace = true

# tokio with full features for native targets only
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile.workspace = true
