[package]
name = "fob-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fob storage backend - SurrealDB graph storage implementation"

[dependencies]
# Foundation crate
fob = { path = "../fob" }

# SurrealDB for graph storage
surrealdb = { workspace = true, features = ["kv-mem"] }

# Core dependencies
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
rustc-hash.workspace = true

# Platform-specific dependencies
[target.'cfg(not(target_family = "wasm"))'.dependencies]
surrealdb = { workspace = true, features = ["kv-rocksdb"] }

# Lints - inherit workspace configuration
[lints]
workspace = true

