[package]
name = "fob-target"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deployment target adapters for Fob bundler"

[dependencies]
fob-bundler = { path = "../fob-bundler", version = "0.4.2" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["fs"] }
miette = { workspace = true, features = ["fancy"] }
thiserror = "2"

[lints]
workspace = true

