[package]
name = "fob"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fob foundation - Runtime abstraction and core types"

[dependencies]

# MDX compilation support from Bunny (WASM-compatible)
# bunny-mdx = { workspace = true }  # Moved to bunny repository
# fob-plugin-mdx = { path = "../fob-plugin-mdx" }  # Moved to bunny repository

# Core dependencies (all WASM-compatible)
thiserror.workspace = true
async-trait.workspace = true

# OXC types for re-export (needed for oxc module)
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_allocator.workspace = true
oxc_span.workspace = true
oxc_semantic.workspace = true

[features]
default = []

# Test utilities (for integration tests)
test-utils = []

# Platform-specific dependencies for native runtime
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "fs"] }
fob-gen = { path = "../fob-gen" }
fob-config = { path = "../fob-config" }

[dev-dependencies]
tempfile.workspace = true
fob-graph = { path = "../fob-graph", version = "0.2.0" }

# Platform-specific dev dependencies for native tests
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Lints - inherit workspace configuration
[lints]
workspace = true
