[package]
name = "fob"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fob - The unified API"

[dependencies]
# Core types (always available)
fob-core = { path = "../fob-core", version = "0.2.0" }

# Higher-level crates
fob-graph = { path = "../fob-graph", version = "0.2.0" }
fob-analysis = { path = "../fob-analysis", version = "0.2.0" }
fob-bundler = { path = "../fob-bundler", version = "0.2.0" }
fob-gen = { path = "../fob-gen", version = "0.2.0" }
fob-config = { path = "../fob-config", version = "0.2.0" }

[features]
default = []

[dev-dependencies]
tempfile.workspace = true
fob-graph = { path = "../fob-graph", version = "0.2.0" }

# Platform-specific dev dependencies for native tests
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Lints - inherit workspace configuration
[lints]
workspace = true
