[package]
name = "rolldown-vendor"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "CLI tool for publishing rolldown as fob_rolldown to crates.io"

[[bin]]
name = "rolldown-vendor"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true, features = ["process", "macros", "rt-multi-thread"] }
walkdir = { workspace = true }

