[package]
name = "blog-axum"
version = "0.2.1"
edition = "2024"
publish = false

[dependencies]
# Web framework
axum = "0.8.7"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# fob MDX compiler
fob-mdx = { path = "../../../crates/fob-mdx" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Templates
askama = "0.14.0"

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching (for development)
notify = "8.2.0"

