[package]
name = "fob-cloudflare-worker-example"
version = "0.1.0"
edition = "2021"
description = "Example Cloudflare Worker using Fob bundler from Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Workers SDK
worker = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols

