[package]
name = "fob-cloudflare-worker-example"
version = "0.4.1"
edition = "2021"
description = "Example Cloudflare Worker using Fob bundler from Rust"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cloudflare Workers SDK
worker = "0.6.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Note: Profile settings are configured at the workspace root in /Cargo.toml
# Package-level profiles are ignored in workspace members

